--- a/Rapport/bibliography.bib
+++ b/Rapport/bibliography.bib
@@ -88,5 +88,10 @@ howpublished={\url{http\://www-igm.univ-mlv.fr/~dr/XPOSE2006/depail/fonctionneme
 title = "Vivacite (informatique)",
 author = "Wikipedia",
 howpublished={\url{https\://fr.wikipedia.org/wiki/Vivacité\_(informatique)}}
+
+@url{PoW,
+title = "Preuve de travail",
+author = "Wikipedia",
+howpublished={\url{https\://fr.wikipedia.org/wiki/Preuve\_de\_travail}}
 }
 
